--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-curl": "*",
         "ext-xml": "*",
         "php": ">=5.4.0",
-        "frontend-studios/phpxmlrpc": "4.1.3"
+        "phpxmlrpc/phpxmlrpc": "4.1.1"
     },
     "require-dev": {
         "apigen/apigen": "4.0.*",
